--- a/Radzen.Blazor/Radzen.Blazor.csproj
+++ b/Radzen.Blazor/Radzen.Blazor.csproj
@@ -10,7 +10,7 @@
     <Product>Radzen.Blazor</Product>
     <Version>4.22.1</Version>
     <Copyright>Radzen Ltd.</Copyright>
-    <Authors>Radzen Ltd.</Authors>
+    <Authors>Radzen Ltd. and GAUSS-LVS mbH</Authors>
     <Description>Radzen Blazor is a set of 70+ free native Blazor UI controls packed with DataGrid, Scheduler, Charts and robust theming including Material design and Fluent UI.</Description>
     <PackageTags>blazor material design fluent fluentui components datagrid scheduler charts</PackageTags>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
