--- a/Radzen.Blazor/Radzen.Blazor.csproj
+++ b/Radzen.Blazor/Radzen.Blazor.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
     <PropertyGroup>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
@@ -10,7 +10,7 @@
         <IsPackable>true</IsPackable>
         <PackageId>Radzen.Blazor.GAUSS</PackageId>
         <Product>Radzen.Blazor</Product>
-        <Version>5.3.5.1</Version>
+        <Version>5.3.5.2</Version>
         <Copyright>Radzen Ltd.</Copyright>
         <Authors>Radzen Ltd. and GAUSS-LVS mbH</Authors>
         <Description>Radzen Blazor is a set of 90+ free native Blazor UI controls packed with DataGrid, Scheduler, Charts and robust theming including Material design and Fluent UI.</Description>
@@ -57,7 +57,7 @@
 
     <Target Name="Sass" BeforeTargets="BeforeBuild" Condition="'$(TargetFramework)' == 'net6.0'">
         <PropertyGroup>
-            <_SassFileList>@(Sass->'&quot;%(FullPath)&quot;', ' ')</_SassFileList>
+            <_SassFileList>@(Sass-&gt;'"%(FullPath)"', ' ')</_SassFileList>
             <DartSassBuilderArgs>files $(_SassFileList) --outputstyle $(DartSassOutputStyle) --level $(DartSassOutputLevel)</DartSassBuilderArgs>
         </PropertyGroup>
         <Message Text="$(DartSassBuilderArgs)" Importance="$(DartSassMessageLevel)" />
