--- a/Radzen.Blazor/Radzen.Blazor.csproj
+++ b/Radzen.Blazor/Radzen.Blazor.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
     <PropertyGroup>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
@@ -10,7 +10,7 @@
         <IsPackable>true</IsPackable>
         <PackageId>Radzen.Blazor.GAUSS</PackageId>
         <Product>Radzen.Blazor</Product>
-    <Version>5.9.7</Version>
+    <Version>5.9.7.1</Version>
         <Copyright>Radzen Ltd.</Copyright>
         <Authors>Radzen Ltd. and GAUSS-LVS mbH</Authors>
         <Description>Radzen Blazor is a set of 90+ free native Blazor UI controls packed with DataGrid, Scheduler, Charts and robust theming including Material design and Fluent UI.</Description>
